--- a/META.yml
+++ b/META.yml
@@ -1,21 +1,22 @@
---- #YAML:1.0
-name:               Eval-Compile
-version:            0.10
-abstract:           Perl extension for compile eval 
+---
+abstract: 'Perl extension for compile eval '
 author:
-    - A. G. Grishayev <grian@cpan.org>
-license:            unknown
-distribution_type:  module
-configure_requires:
-    ExtUtils::MakeMaker:  0
+  - 'A. G. Grishayev <grian@cpan.org>'
 build_requires:
-    ExtUtils::MakeMaker:  0
-requires:  {}
-no_index:
-    directory:
-        - t
-        - inc
-generated_by:       ExtUtils::MakeMaker version 6.56
+  ExtUtils::MakeMaker: 0
+configure_requires:
+  ExtUtils::MakeMaker: 0
+distribution_type: module
+dynamic_config: 1
+generated_by: 'ExtUtils::MakeMaker version 6.62'
+license: unknown
 meta-spec:
-    url:      http://module-build.sourceforge.net/META-spec-v1.4.html
-    version:  1.4
+  url: http://module-build.sourceforge.net/META-spec-v1.4.html
+  version: 1.4
+name: Eval-Compile
+no_index:
+  directory:
+    - t
+    - inc
+requires: {}
+version: 0.11
